personal-website-v1/src/styles/Projects.css
.projects .content {
  display: flex;
  flex-direction: column;
}

.project {
  margin-bottom: 100px;
}

.project .mockup {
  display: flex;
  max-width: 700px;
}

.project__name {
  font-weight: 700;
}

.project__description {
  margin-bottom: 2%;
  display: block;
}

.project__languages {
  display: inline;
  font-size: 12px;
  font-family: Inconsolata, monospace;
  border: 1.5px solid;
  border-radius: 3px;
  padding: 0.5% 1% 0.5% 1%;
  color: #e9c46a;
  margin-right: 5px;
}

.projects .features {
  list-style-type: none;
  padding-top: 0;
}

.projects .features .item:before {
  content: "• "; /* Add content: \2022 is the CSS Code/unicode for a bullet */
  color: #e9c46a; /* Change the color */
  font-weight: bold; /* If you want it to be bold */
  display: inline-block; /* Needed to add space between the bullet and the text */
  width: 1em; /* Also needed for space (tweak if needed) */
  margin-left: -1em; /* Also needed for space (tweak if needed) */
}

